--- a/index.html
+++ b/index.html
@@ -43,8 +43,10 @@
 
     <h2 id="nameText">Happy Birthday 🎂</h2>
     <canvas id="fireworks"></canvas>
-
+    <div class="footer">Created by Faria Usman</div>
+    
     <script src="script.js"></script>
 </body>
+
 
 </html>
